--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <div class="mouse-circle"></div>
+    <!-- <div class="mouse-circle"></div> -->
     <main>
         <div class="hero-container">
 
@@ -52,16 +52,19 @@
 
         <div class="work-container">
 
-            <div class="work_boxes">
+            <div class="work_boxes work_box1">
                 <h1>the plug</h1>
+                <img src="plug.png" alt="" class="img-plug">
                 <h5>2022</h5>
             </div>
-            <div class="work_boxes">
+            <div class="work_boxes work_box2">
                 <h1>ixperience</h1>
+                <img src="ixperience.png" alt="" class="img-ixperience">
                 <h5>2022</h5>
             </div>
-            <div class="work_boxes">
+            <div class="work_boxes work_box3">
                 <h1>hudu</h1>
+                <img src="hudu.png" alt="" class="img-hudu">
                 <h5>2021</h5>
             </div>
 
