image movement done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <!-- <div class="mouse-circle"></div> -->
+    <div class="mouse-circle"></div>
     <main>
         <div class="hero-container">
 
