Website Complete-locomotion remaining

--- a/index.html
+++ b/index.html
@@ -14,43 +14,60 @@
         <div class="hero-container">
 
             <div class="hero-nav">
-                <a href="#">Cynthia Ugwo</a>
+                <div class="move-head-ele">
+                    <a href="#">Cynthia Ugwo</a>
+                </div>
                 <span >MENU+</span>
             </div>
 
             <div class="hero-headings">
                 <div class="head_box1">
-                    <h1>Product</h1>
+                    <div class="move-h1">
+                        <h1>Product</h1>
+                    </div>
+                    
                     <div class="text-comb">
-                        <h1>Designer</h1>
-                        <h5>based in toronto</h5>
+
+                        <div class="move-h1">
+                            <h1>Designer</h1>
+                        </div>
+                        
+                        <div class="move-head-ele">
+                            <h5>based in toronto</h5>
+                        </div>
                     </div>
                 </div>
 
                 <div class="head_box2">
-                    <h5>Available for freelance</h5>
-                    <h5>work from may 23'</h5>
+
+                    <div class="move-head-ele">
+                        <h5>Available for freelance</h5>
+                    </div>
+                    <div class="move-head-ele">
+                        <h5>work from may 23'</h5>
+                    </div>
+
                 </div>
             </div>
             <div class="hero-end">
-                <div class="end_box1">
-                    <a href="#"><span>currently</span> working at yml</a>
+                <div class="end_box1 arrow-ele">
+                    <a href="#" class="hero-end-ele "><span>currently</span> working at yml</a>
                     <i class="fa-solid fa-arrow-right fa-rotate-by" style="--fa-rotate-angle: -30deg;"></i>
                 </div>
-                <div class="end_box2">
-                    <a href="#"><span>protopie</span> ambasssador</a>
+                <div class="end_box2 arrow-ele">
+                    <a href="#" class="hero-end-ele "><span>protopie</span> ambasssador</a>
                     <i class="fa-solid fa-arrow-right fa-rotate-by" style="--fa-rotate-angle: -30deg;"></i>
                 </div>
                 <div class="hero-arrows">
-                    <div><i class="fa-solid fa-arrow-down"></i></div>
-                    <div><i class="fa-solid fa-arrow-down"></i></div>
+                    <a href="#work-container"><i class="fa-solid fa-arrow-down"></i></a>
+                    <a href="#last-container"><i class="fa-solid fa-arrow-down"></i></a>
                 </div>
             </div>
         </div>
 
 <!-- ---------------2nd Container-------------- -->
 
-        <div class="work-container">
+        <div id="work-container">
 
             <div class="work_boxes work_box1">
                 <h1>the plug</h1>
@@ -93,20 +110,22 @@
 
 <!-- ---------------Last Container--------------         -->
 
-        <div class="last-container">
+        <div id="last-container">
 
             <div>
                 <h5>(forgot to mention)</h5>
-                <a href="#" class="youtube-a">subscribe to my youtube channel</a>
-                <i class="fa-solid fa-arrow-right fa-rotate-by" style="--fa-rotate-angle: -30deg;"></i>
+                <span  class="arrow-ele">
+                    <a href="#" class="youtube-a ">subscribe to my youtube channel</a>
+                    <i class="fa-solid fa-arrow-right fa-rotate-by" style="--fa-rotate-angle: -30deg;"></i> 
+                </span>
             </div>
 
             <div class="last_box">
                 <div>
-                    <a href="#">Dribble</a>
-                    <a href="#">Instagram</a>
-                    <a href="#">Linkedin</a>
-                    <a href="#">twitter</a>
+                    <a href="#" class="arrow-ele">Dribble</a>
+                    <a href="#" class="arrow-ele">Instagram</a>
+                    <a href="#" class="arrow-ele">Linkedin</a>
+                    <a href="#" class="arrow-ele">twitter</a>
                 </div>
                 <div>
                     <span>2024&#169;</span>
