--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cynthia Ugwu</title>
+    <link rel="stylesheet" href="locomotive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
+    <div class="loading-box ">
+        <h5>Cynthia Ugwu</h5>
+        <input type="range" name="load" id="load" value="0">
+        <div class="value">0 %</div>
+    </div>
     <div class="mouse-circle"></div>
     <main>
+       
         <div class="hero-container">
 
-            <div class="hero-nav">
+            <div class="hero-nav hide-nav">
                 <div class="move-head-ele">
                     <a href="#">Cynthia Ugwo</a>
                 </div>
                 <span >MENU+</span>
+            </div>
+            <div class="extra">
+
             </div>
 
             <div class="hero-headings">
